--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -5,7 +5,10 @@
     <title>title</title>
   </head>
   <body>
-    <h1>Pig Latinizer</h1>
-  
+    <form method="post" action="/piglatinize">
+    <h1>Pig Latinizer!</h1>
+    <p>Enter your phrase:<input type="text" id="phrase" name="user_phrase"></p>
+    <input type="submit" id="submit">
+  </form>
   </body>
 </html>
